Implement TX action buttons and ELRS pairing functionality
- Replace debug buttons with 6 professional TX action buttons (PAIR, INC SIGNAL, DEC SIGNAL, BIND, RESET, MODEL)
- Add complete ELRS MSP protocol implementation with proper CRSF frame construction
- Implement pairing dialog with status feedback and timeout handling
- Add custom terminal font support (BigBlueTermPlusNerdFontMono-Regular)
- Implement simulation mode for testing without native library
- Add comprehensive project documentation and TODO checklist
- Fix build configuration to work around CMake cache corruption issues

Features implemented:
✅ Professional color-coded TX button UI
✅ ELRS pairing protocol with MSP commands
✅ Status feedback and progress dialogs
✅ Custom font styling system
✅ USB communication bridge architecture
✅ Comprehensive project roadmap and acceptance criteria

Ready for hardware testing and native library integration.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-feature android:name="android.hardware.usb.host" android:required="true"/>
 
     <application
+        android:name=".ElrsOtgApplication"
         android:allowBackup="false"
         android:label="ELRS OTG Native"
         android:theme="@style/AppTheme">
