--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,9 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
-        ndk { abiFilters "arm64-v8a" }
-        externalNativeBuild { cmake { cppFlags "-std=c++20" } }
+        // Temporarily disabled NDK build to test Java functionality
+        // ndk { abiFilters "arm64-v8a" }
+        // externalNativeBuild { cmake { cppFlags "-std=c++20" } }
     }
 
     buildTypes {
@@ -21,7 +22,8 @@ android {
         }
     }
 
-    externalNativeBuild { cmake { path "CMakeLists.txt" } }
+    // Temporarily disabled CMake build to test Java functionality
+    // externalNativeBuild { cmake { path "CMakeLists.txt" } }
 }
 
 dependencies { }
