Implement telemetry reading and fix CRSF protocol issues
Major improvements:
✅ Fixed CRSF MSP frame protocol (corrected length calculation and addressing)
✅ Implemented telemetry reading with CRSF frame parsing
✅ Added USB IN endpoint support for bidirectional communication
✅ Re-enabled native library build with protocol fixes
✅ Added telemetry loop with frame parsing for Link Statistics, Battery, Attitude, Flight Mode

CRSF Protocol Fixes:
- Fixed MSP frame length: now uses 6+payloadSize instead of 8+payloadSize
- Fixed addressing: DEST=0xC8 (Flight Controller), ORIG=0xEE (Transmitter)
- Added proper telemetry frame parsing for types 0x14, 0x08, 0x1E, 0x21

Technical Features:
- Bidirectional USB communication (OUT for commands, IN for telemetry)
- Real-time telemetry parsing with frame validation
- Automatic telemetry start/stop based on SuperG connection status
- Comprehensive logging for debugging protocol communication

Ready for hardware testing with actual ELRS telemetry data!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,8 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
-        // Temporarily disabled NDK build to test Java functionality
-        // ndk { abiFilters "arm64-v8a" }
-        // externalNativeBuild { cmake { cppFlags "-std=c++20" } }
+        ndk { abiFilters "arm64-v8a" }
+        externalNativeBuild { cmake { cppFlags "-std=c++20" } }
     }
 
     buildTypes {
@@ -22,8 +21,7 @@ android {
         }
     }
 
-    // Temporarily disabled CMake build to test Java functionality
-    // externalNativeBuild { cmake { path "CMakeLists.txt" } }
+    externalNativeBuild { cmake { path "CMakeLists.txt" } }
 }
 
 dependencies { }
